force-app/main/default/objects/User/fields/com_smartsheet__ShowSmartsheetIntroduction__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__ShowSmartsheetIntroduction__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether a user sees the Smartsheet introduction (splash) page when they first access a Smartsheet link page, edit page, or tab.</description>
    <label>Show Smartsheet Introduction</label>
    <type>Checkbox</type>
</CustomField>