force-app/main/default/objects/User/fields/deactivated_7_1__c.field-meta.xml
<CustomField>
    <fullName>deactivated_7_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>deactivated 7.1</label>
    <type>Checkbox</type>
</CustomField>