force-app/main/default/objects/User/fields/DigestProductNews__c.field-meta.xml
<CustomField>
    <fullName>DigestProductNews__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Send me a digest of Product News information as it is added to the Intapp Customer Portal</description>
    <label>DigestProductNews</label>
    <type>Checkbox</type>
</CustomField>