force-app/main/default/objects/User/fields/DigestQA__c.field-meta.xml
<CustomField>
    <fullName>DigestQA__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Subscribed me to a weekly digest of Customer Community discussions for the products my firm owns.</description>
    <inlineHelpText>Subscribed me to a weekly digest of Customer Community discussions for the products my firm owns.</inlineHelpText>
    <label>DigestQA</label>
    <type>Checkbox</type>
</CustomField>