force-app/main/default/objects/User/fields/Experience_Certified__c.field-meta.xml
<CustomField>
    <fullName>Experience_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experience Certified</label>
    <type>Checkbox</type>
</CustomField>