force-app/main/default/objects/User/fields/Global_Wave__c.field-meta.xml
<CustomField>
    <fullName>Global_Wave__c</fullName>
    <description>Determines if users have access to Wave quotas.</description>
    <label>Global Wave Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>