force-app/main/default/objects/User/fields/Integrate_Certified__c.field-meta.xml
<CustomField>
    <fullName>Integrate_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrate Certified</label>
    <type>Checkbox</type>
</CustomField>