force-app/main/default/objects/User/fields/Integrate_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Integrate_Expertise__c</fullName>
    <formula>TEXT(Contact.Integrate_Expertise__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integrate Expertise</label>
    <type>Text</type>
</CustomField>