force-app/main/default/objects/User/fields/Legal_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_First_Name__c</fullName>
    <description>SC-000042</description>
    <label>Legal First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>