force-app/main/default/objects/User/fields/Open_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Open_Expertise__c</fullName>
    <formula>TEXT(Contact.Open_Expertise__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Expertise</label>
    <type>Text</type>
</CustomField>