force-app/main/default/objects/User/fields/Retain_CPQ_license__c.field-meta.xml
<CustomField>
    <fullName>Retain_CPQ_license__c</fullName>
    <label>Retain CPQ license</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>