force-app/main/default/objects/User/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <description>Which region does this salesperson work in?</description>
    <inlineHelpText>Which region does this salesperson work in?</inlineHelpText>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Eastern US</fullName>
            </value>
            <value>
                <fullName>Western US/Canada</fullName>
            </value>
            <value>
                <fullName>UK/EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>