force-app/main/default/objects/User/fields/smartsheet_username__c.field-meta.xml
<CustomField>
    <fullName>smartsheet_username__c</fullName>
    <label>smartsheet_username</label>
    <length>60</length>
    <type>Text</type>
</CustomField>