force-app/main/default/objects/User/fields/Time_Certified__c.field-meta.xml
<CustomField>
    <fullName>Time_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Certified</label>
    <type>Checkbox</type>
</CustomField>