force-app/main/default/objects/User/fields/User_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Group__c</fullName>
    <label>User Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Client Operations</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>