force-app/main/default/objects/User/fields/Vacation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Vacation_End_Date__c</fullName>
    <label>Vacation End Date</label>
    <type>Date</type>
</CustomField>