force-app/main/default/objects/User/fields/ValorX__Valorx_User_Access__c.field-meta.xml
<CustomField>
    <fullName>ValorX__Valorx_User_Access__c</fullName>
    <defaultValue>&quot;Runtime + Express Mode&quot;</defaultValue>
    <label>Valorx User Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design Studio</fullName>
            </value>
            <value>
                <fullName>Runtime + Express Mode</fullName>
                <default>true</default>
                <label>Runtime + Express Mode</label>
            </value>
            <value>
                <fullName>Runtime Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>