force-app/main/default/objects/User/fields/Walls_Certified__c.field-meta.xml
<CustomField>
    <fullName>Walls_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Walls Certified</label>
    <type>Checkbox</type>
</CustomField>