force-app/main/default/objects/User/listViews/Sales_Rep.listView-meta.xml
<ListView>
    <fullName>Sales_Rep</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Sales Rep</value>
    </filters>
    <label>Sales Rep</label>
    <language>en_US</language>
</ListView>